components/calendar/tests/snapshots/date_addition_snapshot__2025_12_31_Gregorian.snap
---
source: components/calendar/tests/date_addition_snapshot.rs
expression: "(format!(\"Start: {:?}-{:?}-{:?}\", y, m, d),\nformat!(\"Calendar: {:?}\", cal_kind),\nformat!(\"Duration added: {:?}\", duration),\nformat!(\"Resulting ISO date: {:?}\", result_iso))"
---
(
    "Start: 2025-12-31",
    "Calendar: Gregorian",
    "Duration added: DateDuration { is_negative: false, years: 1, months: 3, weeks: 0, days: 15 }",
    "Resulting ISO date: Date(2027-4-15, default era, for calendar ISO)",
)
