components/calendar/tests/snapshots/date_addition_snapshot__added_date_result.snap
---
source: components/calendar/tests/date_addition_snapshot.rs
expression: result
---
Resulting ISO date after +10 days: Date(2024-11-15, default era, for calendar ISO)
