components/calendar/tests/snapshots/date_addition_snapshot__date_addition_combined_snapshot.snap
---
source: components/calendar/tests/date_addition_snapshot.rs
expression: output
---
Start: 2023-1-1
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 0, months: 0, weeks: 0, days: 10 }
Result: Date(2023-1-11, default era, for calendar ISO)

Start: 2023-1-1
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 0, months: 0, weeks: 0, days: 10 }
Result: Date(2023-1-11, default era, for calendar ISO)

Start: 2023-1-1
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 0, months: 0, weeks: 0, days: 10 }
Result: Date(2023-1-11, default era, for calendar ISO)

Start: 2023-1-1
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 0, months: 2, weeks: 0, days: 0 }
Result: Date(2023-3-1, default era, for calendar ISO)

Start: 2023-1-1
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 0, months: 2, weeks: 0, days: 0 }
Result: Date(2023-3-1, default era, for calendar ISO)

Start: 2023-1-1
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 0, months: 2, weeks: 0, days: 0 }
Result: Date(2023-3-1, default era, for calendar ISO)

Start: 2023-1-1
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 1, months: 0, weeks: 0, days: 0 }
Result: Date(2024-1-1, default era, for calendar ISO)

Start: 2023-1-1
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 1, months: 0, weeks: 0, days: 0 }
Result: Date(2024-1-1, default era, for calendar ISO)

Start: 2023-1-1
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 1, months: 0, weeks: 0, days: 0 }
Result: Date(2024-1-1, default era, for calendar ISO)

Start: 2023-1-1
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 1, months: 3, weeks: 0, days: 15 }
Result: Date(2024-4-16, default era, for calendar ISO)

Start: 2023-1-1
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 1, months: 3, weeks: 0, days: 15 }
Result: Date(2024-4-16, default era, for calendar ISO)

Start: 2023-1-1
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 1, months: 3, weeks: 0, days: 15 }
Result: Date(2024-4-16, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 0, months: 0, weeks: 0, days: 10 }
Result: Date(2024-6-25, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 0, months: 0, weeks: 0, days: 10 }
Result: Date(2024-6-25, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 0, months: 0, weeks: 0, days: 10 }
Result: Date(2024-6-25, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 0, months: 2, weeks: 0, days: 0 }
Result: Date(2024-8-15, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 0, months: 2, weeks: 0, days: 0 }
Result: Date(2024-8-15, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 0, months: 2, weeks: 0, days: 0 }
Result: Date(2024-8-15, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 1, months: 0, weeks: 0, days: 0 }
Result: Date(2025-6-15, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 1, months: 0, weeks: 0, days: 0 }
Result: Date(2025-6-15, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 1, months: 0, weeks: 0, days: 0 }
Result: Date(2025-6-15, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 1, months: 3, weeks: 0, days: 15 }
Result: Date(2025-9-30, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 1, months: 3, weeks: 0, days: 15 }
Result: Date(2025-9-30, default era, for calendar ISO)

Start: 2024-6-15
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 1, months: 3, weeks: 0, days: 15 }
Result: Date(2025-9-30, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 0, months: 0, weeks: 0, days: 10 }
Result: Date(2026-1-10, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 0, months: 0, weeks: 0, days: 10 }
Result: Date(2026-1-10, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 0, months: 0, weeks: 0, days: 10 }
Result: Date(2026-1-10, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 0, months: 2, weeks: 0, days: 0 }
Result: Date(2026-2-28, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 0, months: 2, weeks: 0, days: 0 }
Result: Date(2026-2-28, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 0, months: 2, weeks: 0, days: 0 }
Result: Date(2026-2-28, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 1, months: 0, weeks: 0, days: 0 }
Result: Date(2026-12-31, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 1, months: 0, weeks: 0, days: 0 }
Result: Date(2026-12-31, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 1, months: 0, weeks: 0, days: 0 }
Result: Date(2026-12-31, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Iso
Duration: DateDuration { is_negative: false, years: 1, months: 3, weeks: 0, days: 15 }
Result: Date(2027-4-15, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Gregorian
Duration: DateDuration { is_negative: false, years: 1, months: 3, weeks: 0, days: 15 }
Result: Date(2027-4-15, default era, for calendar ISO)

Start: 2025-12-31
Calendar: Buddhist
Duration: DateDuration { is_negative: false, years: 1, months: 3, weeks: 0, days: 15 }
Result: Date(2027-4-15, default era, for calendar ISO)
