components/calendar/tests/snapshots/date_addition_snapshot__date_addition_readable_nested_snapshot.snap
---
source: components/calendar/tests/date_addition_snapshot.rs
expression: output
---
2023-1-1
  Iso
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2024-1-1, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-16, default era, for calendar ISO)
  Gregorian
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2024-1-1, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-16, default era, for calendar ISO)
  Buddhist
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2024-1-1, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-16, default era, for calendar ISO)
  Chinese
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2024-1-20, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-5-3, default era, for calendar ISO)
  Coptic
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-2, default era, for calendar ISO)
    +1y → Date(2024-1-2, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-16, default era, for calendar ISO)
  Dangi
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2024-1-20, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-5-3, default era, for calendar ISO)
  Ethiopian
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-2, default era, for calendar ISO)
    +1y → Date(2024-1-2, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-16, default era, for calendar ISO)
  EthiopianAmeteAlem
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-2, default era, for calendar ISO)
    +1y → Date(2024-1-2, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-16, default era, for calendar ISO)
  Hebrew
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2023-12-20, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-2, default era, for calendar ISO)
  HijriSimulatedMecca
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2023-12-22, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-3, default era, for calendar ISO)
  HijriTabularTypeIIFriday
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2023-12-21, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-2, default era, for calendar ISO)
  HijriTabularTypeIIThursday
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2023-12-21, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-2, default era, for calendar ISO)
  HijriUmmAlQura
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-2-28, default era, for calendar ISO)
    +1y → Date(2023-12-21, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-2, default era, for calendar ISO)
  Indian
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-2, default era, for calendar ISO)
    +1y → Date(2024-1-1, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-15, default era, for calendar ISO)
  Japanese
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2024-1-1, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-16, default era, for calendar ISO)
  JapaneseExtended
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2024-1-1, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-16, default era, for calendar ISO)
  Persian
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-2, default era, for calendar ISO)
    +1y → Date(2024-1-1, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-14, default era, for calendar ISO)
  Roc
    +10d → Date(2023-1-11, default era, for calendar ISO)
    +2m → Date(2023-3-1, default era, for calendar ISO)
    +1y → Date(2024-1-1, default era, for calendar ISO)
    +1y 3m 15d → Date(2024-4-16, default era, for calendar ISO)

2024-6-15
  Iso
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-15, default era, for calendar ISO)
    +1y → Date(2025-6-15, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-30, default era, for calendar ISO)
  Gregorian
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-15, default era, for calendar ISO)
    +1y → Date(2025-6-15, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-30, default era, for calendar ISO)
  Buddhist
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-15, default era, for calendar ISO)
    +1y → Date(2025-6-15, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-30, default era, for calendar ISO)
  Chinese
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-13, default era, for calendar ISO)
    +1y → Date(2025-6-5, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-16, default era, for calendar ISO)
  Coptic
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-14, default era, for calendar ISO)
    +1y → Date(2025-6-15, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-25, default era, for calendar ISO)
  Dangi
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-13, default era, for calendar ISO)
    +1y → Date(2025-6-5, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-16, default era, for calendar ISO)
  Ethiopian
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-14, default era, for calendar ISO)
    +1y → Date(2025-6-15, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-25, default era, for calendar ISO)
  EthiopianAmeteAlem
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-14, default era, for calendar ISO)
    +1y → Date(2025-6-15, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-25, default era, for calendar ISO)
  Hebrew
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-13, default era, for calendar ISO)
    +1y → Date(2025-6-5, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-17, default era, for calendar ISO)
  HijriSimulatedMecca
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-13, default era, for calendar ISO)
    +1y → Date(2025-6-5, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-16, default era, for calendar ISO)
  HijriTabularTypeIIFriday
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-14, default era, for calendar ISO)
    +1y → Date(2025-6-5, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-16, default era, for calendar ISO)
  HijriTabularTypeIIThursday
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-14, default era, for calendar ISO)
    +1y → Date(2025-6-5, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-16, default era, for calendar ISO)
  HijriUmmAlQura
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-13, default era, for calendar ISO)
    +1y → Date(2025-6-5, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-16, default era, for calendar ISO)
  Indian
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-16, default era, for calendar ISO)
    +1y → Date(2025-6-15, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-10-1, default era, for calendar ISO)
  Japanese
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-15, default era, for calendar ISO)
    +1y → Date(2025-6-15, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-30, default era, for calendar ISO)
  JapaneseExtended
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-15, default era, for calendar ISO)
    +1y → Date(2025-6-15, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-30, default era, for calendar ISO)
  Persian
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-16, default era, for calendar ISO)
    +1y → Date(2025-6-16, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-10-2, default era, for calendar ISO)
  Roc
    +10d → Date(2024-6-25, default era, for calendar ISO)
    +2m → Date(2024-8-15, default era, for calendar ISO)
    +1y → Date(2025-6-15, default era, for calendar ISO)
    +1y 3m 15d → Date(2025-9-30, default era, for calendar ISO)

2025-12-31
  Iso
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-31, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-15, default era, for calendar ISO)
  Gregorian
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-31, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-15, default era, for calendar ISO)
  Buddhist
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-31, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-15, default era, for calendar ISO)
  Chinese
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-20, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-3, default era, for calendar ISO)
  Coptic
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-3-1, default era, for calendar ISO)
    +1y → Date(2026-12-31, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-15, default era, for calendar ISO)
  Dangi
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-20, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-3, default era, for calendar ISO)
  Ethiopian
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-3-1, default era, for calendar ISO)
    +1y → Date(2026-12-31, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-15, default era, for calendar ISO)
  EthiopianAmeteAlem
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-3-1, default era, for calendar ISO)
    +1y → Date(2026-12-31, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-15, default era, for calendar ISO)
  Hebrew
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-21, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-4, default era, for calendar ISO)
  HijriSimulatedMecca
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-20, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-3, default era, for calendar ISO)
  HijriTabularTypeIIFriday
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-21, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-4, default era, for calendar ISO)
  HijriTabularTypeIIThursday
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-21, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-4, default era, for calendar ISO)
  HijriUmmAlQura
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-20, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-3, default era, for calendar ISO)
  Indian
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-3-1, default era, for calendar ISO)
    +1y → Date(2026-12-31, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-15, default era, for calendar ISO)
  Japanese
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-31, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-15, default era, for calendar ISO)
  JapaneseExtended
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-31, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-15, default era, for calendar ISO)
  Persian
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-3-1, default era, for calendar ISO)
    +1y → Date(2026-12-31, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-14, default era, for calendar ISO)
  Roc
    +10d → Date(2026-1-10, default era, for calendar ISO)
    +2m → Date(2026-2-28, default era, for calendar ISO)
    +1y → Date(2026-12-31, default era, for calendar ISO)
    +1y 3m 15d → Date(2027-4-15, default era, for calendar ISO)
